--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "https://masodikovs.github.io/masodikov/",
   "name": "masodikov",
   "version": "0.1.0",
+  "homepage": "https://masodikovs.github.io/masodikovs.ltd/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
